# buy_token_take_profit_kucoin

./: .env-example  .gitignore  Cargo.toml  README.md  settings-example.json
kucoin_rs_custom/: Cargo.toml
kucoin_rs_custom/src/: lib.rs
kucoin_rs_custom/src/kucoin/: trade.rs
src/: main.rs  settings-example.json
src/error/: error.rs
src/exchange/: an_exchange.rs  api_credentials.rs  mod.rs  order.rs
src/exchange/kucoin/: exchange_info.rs  kucoin.rs  mod.rs  token_info.rs
src/http_server/: http_server.rs
src/user/: mod.rs  user.rs  user_manager.rs
src/utils/: time.rs
